# ssv_alert_service

./: Cargo.toml  package_upload.py
backup/: account.rs  decode.rs  models.rs  operator.rs  sync.rs  validator.rs  validator_operator.rs
backup/2022-09-22-051049_create_all/: up.sql
backup/migrations/2022-10-05-091322_create_operator/: up.sql
backup/migrations/2022-10-05-091541_create_posts/: up.sql
cli/: Cargo.toml
cli/src/: main.rs  update_performance.rs
exporter/: Cargo.toml
exporter/src/: main.rs  main.rs.back
src.back/: clear_decided.rs  job.rs  main.rs  sync.rs  sync_decided.rs  update_account.rs  update_event.rs  update_operator.rs
ssv_contract/: Cargo.toml
ssv_contract/src/: contract.rs  decode.rs  event.rs  event_names.txt  lib.rs  ssv_contract.rs  ssv_contract_abi.json
ssv_data_update/: Cargo.toml
ssv_data_update/src/: clear_decided.rs  lib.rs  main.rs  update_account.rs  update_event.rs  update_operator.rs  update_performance.rs
ssv_full_node/: Cargo.toml
ssv_full_node/src/: lib.rs
storage/: .env  Cargo.toml
storage/migrations/2022-10-05-125057_create_tables/: up.sql
storage/src/: account.rs  decided.rs  lib.rs  models.rs  operator.rs  performance.rs  schema.rs  schema.rs.back  schema.rs.back2  tag.rs  validator.rs
test_task/: Cargo.toml
test_task/src/: main.rs
