[package]
name = "ssv_alert_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
prometheus-client = "0.18.0"
#diesel = { version = "2.0.0", features = ["mysql"] }
#dotenvy = "0.15"
env_logger = "0.9.0"
#ethers = { version = "0.17.0", features = ["ws", "openssl"] }
#ethers-core = "0.17.0"
#ethers-contract = "0.17.0"
#ethers-providers = "0.17.0"
tracing = "0.1.36"
tokio = "1.21.2"
log = "0.4.17"
ssv_contract = { path = "./ssv_contract" }
storage = { path = "./storage" }
ethers-core = "0.17.0"
ethers-providers = "0.17.0"
serde = "1.0.145"
serde_json = "1.0.85"
tungstenite = "0.17.3"
url = "2.3.1"
tokio-cron-scheduler = "0.8.1"
chrono = "0.4.22"
rand = "0.8.5"
toml = "0.5.9"
clap = { version = "4.0.18", features = ["derive"] }
serde_derive = "1.0.147"

[workspace]
resolver = "2"

members = [
    "ssv_data_update",
    "storage",
    "ssv_contract",
    "exporter",
]

default-members = [
    "ssv_data_update",
    "storage",
    "ssv_contract",
    "exporter",
]

exclude = [
    "cli",
    "ssv_full_node",
    "performance"
]


[[bin]]
name = "sync_decided_and_clear"
path = "src.back/bin/sync_decided_and_clear.rs"
