[package]
name = "exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus-client = "0.18.0"
env_logger = "0.9.0"
actix-web = "4"
tracing = "0.1.36"
storage = { path = "../storage" }
tokio = "1.21.2"
reqwest = "0.11.12"
log = "0.4.17"
tracing-subscriber = "0.3"
ssv_alert_service = { path = "../../ssv_alert_service" }
serde = "1.0.145"
clap = { version = "4.0.18", features = ["derive"] }
toml = "0.5.9"




