[package]
name = "ssv_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "0.17.0", features = ["ws", "openssl"] }
ethers-core = "0.17.0"
ethers-contract = "0.17.0"
ethers-providers = "0.17.0"
tokio = "1.21.2"
anyhow = "1.0.65"
tokio-util = "0.7.4"
futures = "0.3.24"
env_logger = "0.9.0"
log = "0.4.17"
serde_json = "1.0.85"


