[package]
name = "ssv_data_update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
prometheus-client = "0.18.0"
env_logger = "0.9.0"
tracing = "0.1.36"
tokio = "1.21.2"
log = "0.4.17"
ssv_contract = { path = "../ssv_contract" }
storage = { path = "../storage" }
ethers-core = "0.17.0"
ethers-providers = "0.17.0"
serde = "1.0.145"
serde_json = "1.0.85"
tungstenite = "0.17.3"
url = "2.3.1"
tokio-cron-scheduler = "0.8.1"
chrono = "0.4.22"
rand = "0.8.5"
toml = "0.5.9"
clap = { version = "4.0.18", features = ["derive"] }
serde_derive = "1.0.147"